# libfixeypointy

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  ProjectDesignDocument.md  README.md  clarification.md  data_gen.py  gmp-benchmark.sh  python_comp.py
.circleci/: config.yml
benchmark/: JavaBigDecimal.java  benchmark.sh  cpp_libfixeypointy.cpp
src/: bench.cpp  bench_gmp.cpp  bench_native.cpp  common.h  custom_magic_numbers.h  decimal.cpp  decimal.h  demo.cpp  magic_numbers.h
test/: CMakeLists.txt  basic_test.cpp  parsing_test.cpp  scale_test.cpp
util/: bench_Decimal.py  benchmark-gen.py  benchmark-java.java  benchmark.sh  gmp-benchmark.sh  magic_number_generator.py
